# kubemq-kafka

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
burnin/: DEPENDENCIES.md  Dockerfile  burnin-config.yaml  burnin-smoke.yaml  burnin-soak-kafka-60s.yaml  go.mod  go.sum  main.go
burnin/api/: models.go
burnin/config/: config.go
burnin/disconnect/: disconnect.go
burnin/engine/: engine.go  extras.go  verdict.go  worker_group.go
burnin/metrics/: metrics.go
burnin/payload/: payload.go
burnin/report/: report.go
burnin/server/: server.go
burnin/tracker/: tracker.go
burnin/transport/: kafka_client.go  ops.go  resources.go
burnin/worker/: admin_topic_churn.go  consumer_group.go  keyed_ordering.go  offset_commit_lag.go  produce_round_trip.go  transactions_eos.go  util.go  worker.go
docs/: README.md  architecture.md  configuration.md  getting-started.md
docs/concepts/: consumer-groups.md  cross-client-partitioning.md  interop-with-native.md  topics-partitions-offsets.md  transactions-eos.md
docs/guides/: admin-and-topics.md  consuming-and-groups.md  (+3 more)
examples/: README.md  SHARED-CONVENTIONS.md
examples/python/: README.md  pyproject.toml
examples/python/_shared/: __init__.py
examples/python/admin/partitions_and_configs/: README.md  main.py
examples/python/admin/topics_lifecycle/: README.md  main.py
examples/python/consume/from_beginning_latest/: README.md  main.py
examples/python/consume/seek_offsets_timestamps/: README.md  main.py
examples/python/consumer-groups/commit_and_lag/: README.md  main.py
examples/python/consumer-groups/join_rebalance/: README.md  main.py
examples/python/offsets/list_and_retention/: README.md  main.py
examples/python/produce/basic_acks/: README.md  main.py
examples/python/produce/compression_and_keys/: README.md  main.py
examples/python/produce/idempotent/: README.md  main.py
examples/python/security/sasl_plain_scram/: README.md  main.py
examples/python/transactions/eos_commit_abort/: README.md  main.py
examples/python/transactions/read_committed/: README.md  main.py
examples/rust/: Cargo.toml  README.md
examples/rust/admin/partitions-and-configs/: Cargo.toml  README.md  main.rs
examples/rust/admin/topics-lifecycle/: Cargo.toml  README.md  main.rs
examples/rust/common/: Cargo.toml  lib.rs
examples/rust/consume/from-beginning-latest/: Cargo.toml  README.md  main.rs
examples/rust/consume/seek-offsets-timestamps/: Cargo.toml  README.md  main.rs
examples/rust/consumer-groups/commit-and-lag/: Cargo.toml  README.md  main.rs
examples/rust/consumer-groups/join-rebalance/: Cargo.toml  README.md  main.rs
examples/rust/offsets/list-and-retention/: Cargo.toml  README.md  main.rs
examples/rust/produce/basic-acks/: Cargo.toml  README.md  main.rs
examples/rust/produce/compression-and-keys/: Cargo.toml  README.md  main.rs
examples/rust/produce/idempotent/: Cargo.toml  README.md  main.rs
examples/rust/security/sasl-plain-scram/: Cargo.toml  README.md  main.rs
examples/rust/transactions/eos-commit-abort/: Cargo.toml  README.md  main.rs
examples/rust/transactions/read-committed/: Cargo.toml  README.md  main.rs
(+172 files in other folders)
